# citetrack

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  biome.json  nx.json  package.json  pyproject.toml  tsconfig.base.json
apps/api/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  project.json  pyproject.toml
apps/api/.sisyphus/: handoff-platform-integration.md
apps/api/.sisyphus/evidence/: final-f1-plan-compliance.txt  final-f2-quality.txt  final-f3-real-qa.txt  final-f4-scope-fidelity.txt  fix-guardrails.txt  task-1-contract-tests.txt  task-1-missing-version.txt  task-10-idempotency.txt  task-10-persistence-tests.txt  task-11-onpage-sparse.txt  task-11-onpage-tests.txt  task-12-backlink-tests.txt  task-12-grounded-authority.txt  task-13-entity-tests.txt  task-13-non-local.txt  task-14-findings-tests.txt  task-14-sparse-findings.txt  task-15-missing-evidence.txt  task-15-recommendation-tests.txt  task-16-snapshot-routes.txt  task-16-trend-tests.txt  task-17-dashboard.txt  task-17-onboarding.txt  task-18-scheduler-dry-run.json  task-18-scheduler-tests.txt  task-19-postgres-maintenance.txt  task-2-seed-demo.json  task-2-storage-tests.txt  task-20-docs-contracts.txt  task-20-e2e.txt  task-3-guardrail-tests.txt  task-3-strategy-tests.txt  task-4-list-prompts.json  task-4-seed-demo.json  task-5-e2e-fixed.txt  task-5-malformed-adapter.txt  task-5-orchestrator-tests.txt  task-6-chatgpt-empty.txt  task-6-chatgpt-tests.txt  task-7-gemini-malformed.txt  (+5 more)
apps/api/ai_visibility/: __init__.py  cli.py  config.py  job.py  scan_executor.py  schema.py  worker.py  worker_job.py
apps/api/ai_visibility/alerts/: email_alert.py  engine.py  webhook.py
apps/api/ai_visibility/analysis/: actions.py  brand_entity.py  content_extractability.py  crawler_simulation.py  query_fanout.py  sentiment.py  shopping_visibility.py  social_visibility.py
apps/api/ai_visibility/api/: __init__.py  app.py  auth.py  brands_routes.py  competitors_routes.py  content_analysis_routes.py  export_routes.py  mentions_routes.py  onboarding_routes.py  research_routes.py  routes.py  scans_routes.py  settings_routes.py  user_routes.py
apps/api/ai_visibility/contracts/: __init__.py  scan_contracts.py
apps/api/ai_visibility/degraded/: __init__.py  states.py
apps/api/ai_visibility/diagnosis/: __init__.py  backlinks.py  entity.py  onpage.py
apps/api/ai_visibility/export/: pdf_export.py
apps/api/ai_visibility/extraction/: __init__.py  models.py  pipeline.py
apps/api/ai_visibility/integrations/: dataforseo_keywords.py  dataforseo_mentions.py
apps/api/ai_visibility/metrics/: __init__.py  engine.py  snapshot.py
apps/api/data/: ai_visibility.db
apps/api/docker/: entrypoint-reflex.sh
apps/api/docs/: MIGRATION_NEEDED.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  research-report.md  runbooks.md  test-health.md
apps/api/tests/: conftest.py  test_bootstrap.py  test_brand_entity.py  test_cli_recommendations.py  test_competitor_discovery.py  test_comprehensive.py  test_data_accuracy.py  test_deep_cli.py  test_google_ai_mode_serpapi.py  test_google_ai_overview.py  test_orchestrator_brand.py  test_pixel.py  test_platform_integration.py  test_scan_executor.py  test_shopping_visibility.py  test_tier2_gaps.py  test_tier2_gaps_b.py
apps/api/tests/e2e/: conftest.py  (+4 more)
prisma/client-python/: README.md  pyproject.toml
(+420 files in other folders)
