[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citetrack-prisma-client"
version = "0.1.0"
description = "Citetrack Prisma Client - Pre-generated database client for the citetrack API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Citetrack" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.19.0",
    "jinja2>=2.11.2",
    "pydantic>=1.10.0,<3",
    "click>=7.1.2",
    "python-dotenv>=0.12.0",
    "typing-extensions>=4.5.0",
    "tomlkit",
    "nodeenv",
]

[tool.hatch.build.targets.wheel]
packages = ["prisma"]
artifacts = [
    "prisma/*.prisma",
    "prisma/**/*.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "prisma/**/*.py",
    "prisma/**/*.typed",
    "prisma/**/*.prisma",
    "prisma/**/query-engine-*",
    "README.md",
]
